Update get tweets by id.ipynb

--- a/get tweets by id.ipynb
+++ b/get tweets by id.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ACCESS_TOKEN = \"1347783206859202562-FiV9858V7AvEbQ8rE4begiuWEdLvGw\"\n",
-    "ACCESS_TOKEN_SECRET = \"9WxgVBKG3uDSKfQzhcg3LoSDKfPD99gKRLUfgyttmV9Ex\"\n",
-    "CONSUMER_KEY = \"CHzavtErinBlYWD1Hymqi4Ak0\"\n",
-    "CONSUMER_SECRET = \"U6wvWaBdMBmiBqLeblQQYDEtWvOMTnEA6fBrFvMUoRtg14rfLN\""
+    "ACCESS_TOKEN = \"\"\n",
+    "ACCESS_TOKEN_SECRET = \"\"\n",
+    "CONSUMER_KEY = \"\"\n",
+    "CONSUMER_SECRET = \"\""
    ]
   },
   {
